broken HP to smaller components and finished styling menu items component

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,18 @@
     transform: rotate(360deg);
   }
 } */
+
+
+
+body {
+  font-family: 'Open Sans Condensed', sans-serif;
+  font-weight: 300;
+}
+
+
+
+
+
+
+
+
